Update distance plugin (add save/open gpx)